# Cups-Dymo-LabelWriter450

./: .env.example  .gitignore  Acceptance_Tests.md  Dockerfile  README.md  cupsd.conf  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: Static Analysis.yaml  defender-for-devops.yml
cups_dymo_label_printer/: __init__.py  config.py  label_generator.py  printer_service.py  web_app.py
cups_dymo_label_printer/templates/: index.html
docs/: index.md
tests/: test_label_generator.py  test_printer_service.py  test_web_app.py
web_app/: app.py
web_app/templates/: index.html
